--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish and Release
+name: Test, Build, and Publish
 
 on:
   push:
@@ -6,9 +6,13 @@ on:
       - 'v*.*.*'
 
 jobs:
-  build-and-publish:
-    name: Build and Publish to PyPI
-    runs-on: ubuntu-latest
+  test-build-publish:
+    name: Test on ${{ matrix.os }} with Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: [3.10]
 
     steps:
       - name: Checkout code
@@ -17,26 +21,42 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
 
-      - name: Install build dependencies
+      - name: Install dependencies and test tools
         run: |
-          python -m pip install --upgrade pip build setuptools setuptools-scm wheel
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install .  # install your package for testing
 
-      - name: Build the package
-        run: python -m build
+      - name: Run tests
+        run: pytest
 
-      - name: Publish to PyPI
+      - name: Build the package (Linux only)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          python -m pip install build setuptools setuptools-scm wheel
+          python -m build
+
+      - name: Smoke test CLI from built package (Linux only)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          pip uninstall -y hsr
+          pip install dist/*.whl
+          hsr --version
+
+      - name: Publish to PyPI (Linux only)
+        if: matrix.os == 'ubuntu-latest'
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           python -m pip install --upgrade twine
           twine upload dist/*
-
+  
   github-release:
     name: Create GitHub Release
-    needs: build-and-publish
+    needs: test-build-publish
     runs-on: ubuntu-latest
 
     steps:
