--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,7 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+version_scheme = "post-release"
+local_scheme = "no-local-version"
