improves wrokflow for better, cleaner tags

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   
+          fetch-tags: true 
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -31,6 +34,11 @@ jobs:
 
       - name: Run tests
         run: pytest
+
+      - name: Print package version
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          python setup.py --version
 
       - name: Build the package (Linux only)
         if: matrix.os == 'ubuntu-latest'
