--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,5 @@ build-backend = "setuptools.build_meta"
 
 
 [tool.setuptools_scm]
-version_scheme = "post-release"
+version_scheme = "release-branch-semver"
 local_scheme = "no-local-version"
